--- a/content/research/基于远程监督的关系抽取研究现状.md
+++ b/content/research/基于远程监督的关系抽取研究现状.md
@@ -1,7 +1,7 @@
 ---
 title: "基于远程监督的关系抽取研究现状"
 date: 2020-02-09T18:25:58+00:00
-tags: ["关系抽取"]
+tags: ["关系抽取", "远程监督"]
 ---
 
 关系抽取建立在命名实体识别的基础上，是知识图谱补全的重要任务之一。关系抽取的目标是从文本中提取出两个实体之间的语义关系。传统的关系抽取虽然已经达到相当好的效果，但需要人工预先精准地标注大量句子级别的数据，标注成本十分昂贵。在实际场景中，面向数以千计的关系、数以千万计的实体对、以及数以亿计的句子，依靠人工标注训练数据几乎是不可能完成的任务<sup>[1]</sup>。
